--- a/BlazorApp/BlazorApp/wwwroot/index.html
+++ b/BlazorApp/BlazorApp/wwwroot/index.html
@@ -10,6 +10,13 @@
     <link href="css/app.css" rel="stylesheet" />
     <link rel="icon" type="image/png" href="favicon.png" />
     <link href="BlazorApp.styles.css" rel="stylesheet" />
+
+    <!--Uikit CSS-->
+    <link rel="stylesheet" href="css/uikit.min.css" />
+
+    <!--Uikit JS-->
+    <script src="js/uikit.min.js"></script>
+    <script src="js/uikit-icons.min.js"></script>
 </head>
 
 <body>
